# silicon-char-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  dut.py  soak.py  testplan.py
bench/instruments/: __init__.py  base.py  mock.py
firmware/: CMakeLists.txt
firmware/host_test/: test_workloads.c
firmware/payload/: main.c  workloads.c  workloads.h
testplans/: smoke.yaml
tests/: test_crc_reference.py  test_dut_protocol.py  test_mock_instrument.py  test_testplan.py
